Fixes to get specular unit testing working.  Fixes include: Quick fix to OpticalProperties to assign mus to something finite if g=1. Adding PseudoSpecularTissueBoundary enum. Additional code in MCSimulation to handle case when both tissueDistance and vbDistance are both infinity (this occurs if photon escapes out bottom, e.g., and there are no transmittance detectors defined). Added update to currentRegionIndex in photon when pass to air and appropriate DP.StateFlag setting when specular.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -215,8 +215,8 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\pMCDAWDetectorsTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\SpecularDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\SpecularDetectorsTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\SpecularDetectorTests.cs">
+      <Link>MonteCarlo\Detectors\SpecularDetectorTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Helpers\SourceToolboxTests.cs">
       <Link>MonteCarlo\Helpers\SourceToolboxTests.cs</Link>
