--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -193,21 +193,21 @@
     <Compile Include="Modeling\ForwardSolvers\INurbs.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteFourierTransform.cs" />
     <Compile Include="Modeling\ForwardSolvers\LinearDiscreteHankelTransform.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\AngularMesh.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\BoundaryCoupling.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\LightSource.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\Measurement.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\SpatialMesh.cs" />
-    <Compile Include="Fem\MGRTE\2D\Enums.cs" />
-    <Compile Include="Fem\MGRTE\2D\Initialization.cs" />
-    <Compile Include="Fem\MGRTE\2D\IO\ParametersIO.cs" />
-    <Compile Include="Fem\MGRTE\2D\IO\ReadFiles.cs" />
-    <Compile Include="Fem\MGRTE\2D\MathFunctions.cs" />
-    <Compile Include="Fem\MGRTE\2D\MultiGridCycle.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\Output.cs" />
-    <Compile Include="Fem\MGRTE\2D\DataStructures\Parameters.cs" />
-    <Compile Include="Fem\MGRTE\2D\SolverMGRTE.cs" />
-    <Compile Include="Fem\MGRTE\2D\IO\Source.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\AngularMesh.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\BoundaryCoupling.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\LightSource.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Measurement.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\SpatialMesh.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Enums.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\Initialization.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\IO\ParametersIO.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\IO\ReadFiles.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\MathFunctions.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\MultiGridCycle.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Output.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\DataStructures\Parameters.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\SolverMGRTE.cs" />
+    <Compile Include="FemModeling\MGRTE\2D\IO\Source.cs" />
     <Compile Include="Modeling\ForwardSolvers\MonteCarloForwardSolver.cs" />
     <Compile Include="Modeling\ForwardSolvers\MonteCarloLoader.cs">
       <SubType>Code</SubType>
