--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -113,6 +113,9 @@
     <Compile Include="..\Vts.Test\Common\Extensions\ArrayExtensionsTests.cs">
       <Link>Common\Extensions\ArrayExtensionsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Common\Extensions\OpticalPropertiesExtensionsTests.cs">
+      <Link>Common\Extensions\OpticalPropertiesExtensionsTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Common\Helpers\Range\DoubleRangeTests.cs">
       <Link>Common\Helpers\Range\DoubleRangeTests.cs</Link>
     </Compile>
@@ -226,9 +229,6 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\IO\DetectorIOTests.cs">
       <Link>MonteCarlo\IO\DetectorIOTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\MonteCarloFactoriesTests.cs">
-      <Link>MonteCarlo\MonteCarloFactoriesTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
       <Link>MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs</Link>
